--- a/guides/getting-started/setup-installation.mdx
+++ b/guides/getting-started/setup-installation.mdx
@@ -1,226 +1,261 @@
 ---
-title: "Installation and Setup"
-description: "Comprehensive steps for installing GoogleTest and GoogleMock, covering both Bazel and CMake build systems. Learn how to integrate the framework into new or existing C++ projects, configure build files, and verify your environment."
+title: "Setting Up and Installing GoogleTest"
+description: "A comprehensive, step-by-step guide to installing GoogleTest and GoogleMock in your C++ project, including building from source and integrating with CMake or Bazel. This page ensures a smooth onboarding experience regardless of your build system or platform."
 ---
 
-# Installation and Setup of GoogleTest & GoogleMock
+# Setting Up and Installing GoogleTest
 
-## Overview
-This guide provides comprehensive, step-by-step instructions to install and set up GoogleTest and GoogleMock frameworks in your C++ projects. Whether you're using Bazel or CMake as your build system, you will learn how to integrate the frameworks into new or existing projects, configure your build files correctly, and verify the setup to ensure a smooth testing workflow.
-
----
-
-## 1. Preparation and Prerequisites
-
-Before starting the installation process, ensure your environment meets the following:
-
-- You have a functional C++ development environment (compiler, build tools).
-- For **CMake**, have CMake version 3.13 or higher installed.
-- For **Bazel**, ensure Bazel is installed and configured.
-- Basic familiarity with your chosen build system (Bazel or CMake).
-- Network access to clone the GoogleTest/GoogleMock repositories or download release packages.
-
-<Tip>
-If you are setting up for the first time, review the [System Requirements & Prerequisites](https://github.com/google/googletest/blob/main/docs/setup-prerequisites/prerequisites-requirements.md) to confirm compatibility with your platform and tools.
-</Tip>
+A comprehensive, step-by-step guide to installing GoogleTest and GoogleMock in your C++ project, including building from source and integrating with CMake or Bazel. This page ensures a smooth onboarding experience regardless of your build system or platform.
 
 ---
 
-## 2. Installation Steps
+## 1. Overview
 
-GoogleTest and GoogleMock are usually installed together as they form a unified testing framework. GoogleMock depends on GoogleTest internally.
+### What You'll Achieve
+This guide walks you through obtaining, building, and integrating GoogleTest and GoogleMock into your C++ development environment. Whether you use CMake, Bazel, or manual build techniques, you’ll learn how to set up these frameworks so that you can write and run unit tests and mocks efficiently.
 
-### 2.1 Installation Using CMake
+### Prerequisites
+- A C++ development environment with a compiler supporting at least C++17.
+- Basic understanding of your build system (CMake, Bazel, or manual builds).
+- CMake version 3.14 or later if you plan to use CMake for building GoogleTest.
+- Git installed or access to the GitHub repository releases.
 
-#### Step 1: Clone the Repository
+### Expected Outcome
+By completing this setup, you'll be able to:
+- Build GoogleTest and GoogleMock from source.
+- Integrate GoogleTest into your project builds.
+- Run tests using the frameworks’ test runners.
+- Customize initialization of GoogleTest and GoogleMock.
+
+### Time Estimate
+About 15-30 minutes depending on your build system familiarity.
+
+### Difficulty Level
+Beginner to Intermediate (depending on build system experience).
+
+---
+
+## 2. Step-by-Step Installation and Setup
+
+### Step 1: Clone the GoogleTest Repository
+
 ```bash
-git clone https://github.com/google/googletest.git
-git clone will fetch both Googletest and GoogleMock sources.
+git clone https://github.com/google/googletest.git -b main
+cd googletest
 ```
 
-#### Step 2: Create a Build Directory
+This repository contains both GoogleTest and GoogleMock sources.
+
+### Step 2: Build Using CMake (Standalone)
+
+1. Create a build directory:
+
+   ```bash
+   mkdir build && cd build
+   ```
+
+2. Generate build files with CMake:
+
+   ```bash
+   cmake ..
+   ```
+   By default, this builds both GoogleTest and GoogleMock.
+
+3. Compile the libraries:
+
+   ```bash
+   make
+   ```
+
+4. (Optional) Install globally (requires admin rights):
+
+   ```bash
+   sudo make install
+   ```
+
+#### To build GoogleTest only (no GoogleMock):
+
 ```bash
-mkdir build && cd build
+cmake .. -DBUILD_GMOCK=OFF
+make
 ```
 
-#### Step 3: Configure the Build
-```bash
-cmake ../googletest
-```
-This configures both GoogleTest and GoogleMock projects.
+### Step 3: Integrate GoogleTest into Your CMake Project
 
-#### Step 4: Build the Framework
-```bash
-cmake --build . --config Release
-```
+The most straightforward way is to link against the installed `gtest` libraries or include GoogleTest as a subdirectory.
 
-#### Step 5: Install Libraries and Headers
-Use `make install` or equivalent for your platform, or:
-```bash
-cmake --install .
-```
-
-#### Step 6: Link GoogleTest and GoogleMock to Your Project
-Update your `CMakeLists.txt` to include GoogleTest and GoogleMock headers and libraries. Example for your test executable:
+#### Using Installed Libraries
 
 ```cmake
 find_package(GTest REQUIRED)
-add_executable(my_tests test_main.cpp ...)
-target_link_libraries(my_tests GTest::gtest GTest::gtest_main GMock::gmock GMock::gmock_main pthread)
+add_executable(my_test test.cpp)
+target_link_libraries(my_test GTest::gtest_main)
+add_test(NAME my_test COMMAND my_test)
 ```
 
+#### Adding GoogleTest as Subdirectory
 
-### 2.2 Installation Using Bazel
-
-GoogleTest and GoogleMock have native Bazel support.
-
-#### Step 1: Declare External Repositories
-Add the following in your `WORKSPACE` file:
-
-```starlark
-http_archive(
-    name = "com_google_googletest",
-    urls = ["https://github.com/google/googletest/archive/release-<version>.zip"],
-    strip_prefix = "googletest-release-<version>",
-)
+```cmake
+add_subdirectory(path/to/googletest)
+add_executable(my_test test.cpp)
+target_link_libraries(my_test gtest_main)
+add_test(NAME my_test COMMAND my_test)
 ```
 
-Adjust `<version>` to the desired release tag.
+### Step 4: Build Using Bazel
 
-#### Step 2: Use Targets in Your `BUILD` Files
-Depend on `@com_google_googletest//:gmock_main` or `:gtest_main`:
+1. Add GoogleTest as a dependency in your WORKSPACE file.
+2. Reference the `cc_test` rules in your BUILD files.
 
-```starlark
-cc_test(
-    name = "my_test",
-    srcs = ["my_test.cpp"],
-    deps = ["@com_google_googletest//:gmock_main"],
-)
-```
+(Refer to [GoogleTest Bazel Integration Guide](https://github.com/google/googletest/blob/main/googletest/README.md) for details.)
 
-This will build your test with GoogleMock and GoogleTest.
+### Step 5: (Optional) Write Your Own `main()` Function
 
----
+While GoogleTest and GoogleMock provide default `main()` implementations (`gtest_main` or `gmock_main`), you can provide your own when you need custom initialization (e.g., command-line flag parsing). Here is an example:
 
-## 3. Configuring the Build Files for Integration
+```cpp
+#include <gtest/gtest.h>
 
-### Using CMake
-
-- **Include Directories**: GoogleMock and GoogleTest headers are normally found automatically via `find_package(GTest)`.
-- **Link Libraries**: Link your test targets against `gtest`, `gtest_main`, `gmock`, and `gmock_main` as appropriate.
-
-<Tip>
-Use `gmock_main` or `gtest_main` libraries if you prefer GoogleTest or GoogleMock's provided main() function, which calls `RUN_ALL_TESTS()` internally, so you don't have to write one yourself.
-</Tip>
-
-- If your project requires customized initialization, consider writing your own `main()` that calls `testing::InitGoogleMock(&argc, argv);` followed by `RUN_ALL_TESTS();`.
-
-### Using Bazel
-
-- Depend on `@com_google_googletest//:gmock_main` for both GoogleMock and GoogleTest with main() function included.
-- For just GoogleTest, depend on `@com_google_googletest//:gtest_main`.
-
----
-
-## 4. Verifying Your Installation
-
-### Step 1: Write a Simple Test
-Create a simple test file `sample_test.cpp`:
-
-```c++
-#include "gtest/gtest.h"
-
-TEST(SanityTest, BasicAssertions) {
-  EXPECT_EQ(7 * 6, 42);
-}
-```
-
-### Step 2: Build the Test
-Follow your build system's normal build procedure, linking with GoogleTest or GoogleMock libraries.
-
-### Step 3: Run the Test
-Execute the test binary. You should see output similar to:
-
-```
-[==========] Running 1 test from 1 test suite.
-[----------] Global test environment set-up.
-[----------] 1 test from SanityTest
-[ RUN      ] SanityTest.BasicAssertions
-[       OK ] SanityTest.BasicAssertions (0 ms)
-[----------] 1 test from SanityTest (0 ms total)
-
-[----------] Global test environment tear-down
-[==========] 1 test from 1 test suite ran. (0 ms total)
-[  PASSED  ] 1 test.
-```
-
-<Tip>
-If you are using GoogleMock, initialize with `testing::InitGoogleMock()` instead of `InitGoogleTest()`, and link to `gmock_main` or provide your custom `main()`.
-</Tip>
-
----
-
-## 5. Troubleshooting Common Issues
-
-<AccordionGroup title="Common Issues and Resolutions">
-<Accordion title="Test Binary Not Linking or Missing main()">
-If your test binary fails to link due to missing `main()`, ensure you:
-
-- Link against `gtest_main` or `gmock_main` libraries which provide main(), or
-- Write your own main that initializes and runs tests:
-
-```c++
 int main(int argc, char** argv) {
-  testing::InitGoogleMock(&argc, argv); // Or InitGoogleTest
+  testing::InitGoogleTest(&argc, argv);
   return RUN_ALL_TESTS();
 }
 ```
+
+For GoogleMock:
+
+```cpp
+#include <gmock/gmock.h>
+
+int main(int argc, char** argv) {
+  testing::InitGoogleMock(&argc, argv);
+  return RUN_ALL_TESTS();
+}
+```
+
+### Step 6: Verify the Installation
+
+Create a simple test file `sample_test.cpp`:
+
+```cpp
+#include <gtest/gtest.h>
+
+TEST(SampleTest, BasicAssertions) {
+  EXPECT_EQ(1 + 1, 2);
+}
+```
+
+Build it:
+
+```bash
+g++ -std=c++17 sample_test.cpp -lgtest -lgtest_main -pthread -o sample_test
+```
+
+Run the test:
+
+```bash
+./sample_test
+```
+
+You should see output indicating that the test passed.
+
+---
+
+## 3. Understanding GoogleMock Integration and Initialization
+
+GoogleMock extends GoogleTest with mocking capabilities.
+
+### Initialization Tips
+
+- Use `testing::InitGoogleMock(&argc, argv);` to properly initialize both GoogleMock and GoogleTest.
+- It parses and strips GoogleMock-specific command-line flags (like `--gmock_verbose`) out of `argv`.
+
+Example `main` function with GoogleMock:
+
+```cpp
+#include <gmock/gmock.h>
+
+int main(int argc, char** argv) {
+  testing::InitGoogleMock(&argc, argv);
+  return RUN_ALL_TESTS();
+}
+```
+
+On some embedded or Arduino-like platforms where `argc` and `argv` are not available, use `testing::InitGoogleMock();` without parameters.
+
+### Key Flags
+
+- `--gmock_verbose`: Controls the verbosity of mock framework outputs. E.g., `--gmock_verbose=info`.
+- `--gmock_default_mock_behavior`: Sets mock object behavior - nice, strict, etc.
+
+For detailed usage, visit the [GoogleMock README](https://github.com/google/googletest/blob/main/googlemock/README.md).
+
+---
+
+## 4. Practical Tips and Best Practices
+
+- Prefer linking to `gtest_main` or `gmock_main` to avoid writing your own boilerplate `main()`.
+- Use CMake’s `add_subdirectory()` for easier integration and to keep GoogleTest in sync with your project.
+- Always use compatible versions of GoogleTest and GoogleMock.
+- Keep your test binaries separated from your production binaries.
+- Regularly update GoogleTest for the latest improvements and fixes.
+
+---
+
+## 5. Troubleshooting Common Setup Issues
+
+<AccordionGroup title="Troubleshooting Setup Issues">
+<Accordion title="Build Errors with CMake">
+- **Problem:** CMake configure fails or can’t find dependencies.
+- **Solution:** Ensure CMake version is 3.14 or above.
+  Check that compilers support C++17.
+  Verify proper Git clone of the repository.
 </Accordion>
-<Accordion title="Build Failures Due to Missing Includes">
-Make sure your include directories point to GoogleTest and GoogleMock headers. With CMake, use `find_package(GTest REQUIRED)` and link targets properly.
+<Accordion title="Linking Errors">
+- **Problem:** Linker complains about unresolved symbols like `RUN_ALL_TESTS()`.
+- **Solution:** Make sure to link against `gtest_main` or `gmock_main`.
+  Ensure your include and library paths point to the correct GoogleTest installation.
 </Accordion>
-<Accordion title="Tests Not Running or Not Found">
-Verify you have called `RUN_ALL_TESTS()` in your main function. Also, ensure your test files are compiled and linked into your test executable.
+<Accordion title="GoogleMock Flags Not Recognized">
+- **Problem:** Passing GoogleMock flags do not affect behavior.
+- **Solution:** Use `testing::InitGoogleMock(&argc, argv);` instead of just `InitGoogleTest`.
+  Remove unrecognized flags manually if needed.
 </Accordion>
-<Accordion title="Bazel Build Errors Related to Repository Setup">
-Double-check your `WORKSPACE` file contains the proper `http_archive` definitions with the correct URLs and strip prefixes matching the released versions.
+<Accordion title="Tests Not Running or Being Discovered">
+- **Problem:** After compilation, tests do not run or are not found.
+- **Solution:** Verify that tests are registered correctly with `TEST()` macros.
+  Ensure you call `RUN_ALL_TESTS()` in your main function.
 </Accordion>
 </AccordionGroup>
 
-<Tip>
-For detailed platform-specific installation, troubleshooting, and integration guidance, consult the [Installation (All Platforms)](https://github.com/google/googletest/blob/main/docs/setup-prerequisites/installation-platforms.md) and [Integrating GoogleTest with Your Workflow](https://github.com/google/googletest/blob/main/docs/overview/concepts-architecture/integration-overview.md) guides.
-</Tip>
+---
+
+## 6. Additional Resources and Next Steps
+
+- **GoogleTest Primer:** [GoogleTest Primer (docs/primer.md)](/docs/primer.md) – Learn the basics of writing tests.
+- **Writing Your First Test:** [Writing Your First Test Guide](/guides/getting-started/writing-first-test) – Practical next steps after setup.
+- **Mocking with GoogleMock:** [GoogleMock README](https://github.com/google/googletest/blob/main/googlemock/README.md) – Deep dive into the mocking framework.
+- **Troubleshooting Setup Issues:** [Troubleshooting Guide](/getting-started/first-steps-usage/troubleshooting-setup) – In-depth help for common problems.
+- **Integration with Build Systems:** [Integration FAQ](/faq/advanced-integration/integration-with-build-systems) – How to best integrate with CMake, Bazel, and others.
 
 ---
 
-## 6. Best Practices & Tips
+## 7. Summary Diagram
 
-- Prefer linking against `gmock_main` or `gtest_main` to simplify test executable setup unless you have custom initialization needs.
-- Always call `testing::InitGoogleMock()` or `testing::InitGoogleTest()` **before** running tests to parse flags and initialize the framework correctly.
-- Organize tests to leverage fixtures and parameterized testing for scalable test suites.
-- Keep your build environment hermetic and isolate third-party dependencies for reproducibility (especially with Bazel).
+```mermaid
+flowchart TD
+  A[Clone googletest repo] --> B{Choose Build System}
+  B -->|CMake| C[Create build dir]
+  C --> D[Run cmake ..]
+  D --> E[Run make]
+  E --> F[Install or Link in Project]
+  B -->|Bazel| G[Setup WORKSPACE and BUILD files]
+  G --> F
+  F --> H[Write Tests]
+  H --> I[Run Tests with RUN_ALL_TESTS()]
 
----
-
-## 7. Next Steps
-
-After installation and setup:
-
-- Explore the [Writing Your First Test](https://github.com/google/googletest/blob/main/docs/guides/getting-started/writing-first-test.md) guide.
-- Learn about [Configuring & Integrating GoogleTest](https://github.com/google/googletest/blob/main/docs/getting-started/first-run-usage/configuration-integration.md).
-- Troubleshoot using [Troubleshooting & Quick Validation](https://github.com/google/googletest/blob/main/docs/getting-started/first-run-usage/troubleshooting-quick-validation.md).
-- Delve into mocking with GoogleMock in the [Creating and Using Mocks](https://github.com/google/googletest/blob/main/docs/guides/mocking-and-advanced-techniques/creating-and-using-mocks.md) guide.
-
----
-
-## References & Further Reading
-
-- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md) — Introduction to writing tests.
-- [GoogleMock README](https://github.com/google/googletest/blob/main/googlemock/README.md) — Overview of mocking framework.
-- [CMakeLists.txt](https://github.com/google/googletest/blob/main/googlemock/CMakeLists.txt) — Example build configuration.
-- [Testing main() implementations](https://github.com/google/googletest/blob/main/googletest/src/gtest_main.cc) — Reference source for main() used by gtest_main.
-- [GoogleMock main() implementation](https://github.com/google/googletest/blob/main/googlemock/src/gmock_main.cc) — Reference main() used by gmock_main.
+  classDef buildSteps fill:#f9f,stroke:#333,stroke-width:1px
+  class C,D,E,F,G buildSteps;
+```
 
 ---
-
-By following this guide, you'll have GoogleTest and GoogleMock installed and integrated in your project, ready to create reliable and maintainable C++ tests with both frameworks.
