--- a/guides/getting-started/writing-first-test.mdx
+++ b/guides/getting-started/writing-first-test.mdx
@@ -1,299 +1,174 @@
 ---
 title: "Writing Your First Test"
-description: "A hands-on walkthrough of creating your first unit test. Introduces the basic test structure, test discovery, and assertion usage with real code examples, enabling users to quickly validate their code’s correctness."
+description: "Follow a practical walkthrough for creating your first test case using GoogleTest, from initial assertions to running the test suite. Designed for immediate hands-on results, this guide demystifies the framework's syntax and primary workflow."
 ---
 
-# Writing Your First Test
+# Writing Your First Test with GoogleTest
 
-A hands-on walkthrough of creating your first unit test using GoogleTest and GoogleMock. This guide introduces the basic structure of a test, how test discovery works, and how to use assertions effectively with real code examples to quickly validate your code's correctness.
-
----
-
-## 1. What You Will Learn
-
-- How to write a basic test using the `TEST` macro.
-- How test discovery works automatically.
-- How to define and use mock classes with `MOCK_METHOD`.
-- How to set expectations on mock methods with `EXPECT_CALL`.
-- How to use assertions to verify test outcomes.
-
-## 2. Prerequisites
-
-- GoogleTest and GoogleMock libraries installed and properly set up in your build environment.
-- Basic knowledge of C++ syntax.
-- Familiarity with your project’s codebase that you want to test.
-
-If you're not yet set up, see [Installation and Setup](../../guides/getting-started/setup-installation) and [Configuring & Integrating GoogleTest](../../getting-started/first-run-usage/configuration-integration).
-
-## 3. Expected Outcome
-
-By completing this guide, you will have successfully written and run your first unit test and mock, verifying a simple piece of logic and understanding the core test structure in GoogleTest and GoogleMock.
-
-## 4. Time Estimate
-
-About 15-30 minutes, including writing the test code and running it.
-
-## 5. Difficulty Level
-
-Beginner.
+## Introduction
+Welcome to your first hands-on journey with GoogleTest, the leading C++ testing framework. This guide walks you through creating a simple test case from writing assertions to compiling and running your tests. Designed for immediate practical results, you'll understand GoogleTest's basic syntax and workflow, empowering you to build robust and maintainable tests.
 
 ---
 
-# Step-by-Step Instructions
+## Workflow Overview
 
-Follow this sequence to write, understand, and run your first test.
+### What You'll Accomplish
+By following this guide, you will write, build, and run your first test case using GoogleTest. You'll become familiar with the syntax for basic assertions, test naming conventions, and interpreting test results.
 
-### Step 1: Define a Simple Test Case
+### Prerequisites
+- A C++ development environment with a compiler that supports C++11 or later.
+- GoogleTest and GoogleMock installed or integrated into your project. For installation instructions, see the [Setting Up and Installing GoogleTest guide](/guides/getting-started/setup-installation).
+- Basic familiarity with compiling and running C++ programs.
 
-Create a test file (e.g., `my_first_test.cc`), and include GoogleTest headers.
+### Expected Outcome
+- Successfully writing a GoogleTest test that evaluates the behavior of a simple function.
+- Understanding how to run GoogleTest tests using `RUN_ALL_TESTS()`.
+- Reading and interpreting test output to verify test success or failure.
+
+### Time Estimate
+Approximately 10 to 15 minutes.
+
+### Difficulty
+Beginner
+
+---
+
+## Step-by-Step Instructions
+
+### 1. Write a Simple Function to Test
+Before creating a test case, you need a function to test. For example, let's write a simple factorial function:
+
+```cpp
+int Factorial(int n) {
+  if (n <= 1) return 1;
+  return n * Factorial(n - 1);
+}
+```
+
+This function calculates the factorial of a non-negative integer recursively.
+
+### 2. Create Your First GoogleTest Test Case
+In a new `.cc` source file, include GoogleTest headers and write your test:
 
 ```cpp
 #include <gtest/gtest.h>
 
-// Define a simple test.
-TEST(ExampleTest, SimpleCheck) {
-  int value = 42;
-  EXPECT_EQ(value, 42);  // Assertion
+// Tests that Factorial() computes correct results for zero and positive inputs.
+TEST(FactorialTest, ComputesCorrectValues) {
+  EXPECT_EQ(Factorial(0), 1);  // Factorial of 0 is 1
+  EXPECT_EQ(Factorial(1), 1);  // Factorial of 1 is 1
+  EXPECT_EQ(Factorial(2), 2);  // Factorial of 2 is 2
+  EXPECT_EQ(Factorial(3), 6);  // Factorial of 3 is 6
+  EXPECT_EQ(Factorial(8), 40320);  // Factorial of 8 is 40320
 }
 ```
 
-- The `TEST` macro creates a test named `ExampleTest.SimpleCheck`.
-- `EXPECT_EQ` asserts that the two values are equal.
+- The `TEST` macro defines a test with two parameters: the test suite name `FactorialTest` and the test name `ComputesCorrectValues`.
+- `EXPECT_EQ` asserts that the first argument equals the second. Failures are reported non-fatally, allowing the test to continue.
 
-### Step 2: Build and Run Your Test
+### 3. Write Your Main Function to Run Tests
+GoogleTest provides a default main function in its `gtest_main` library, so you usually don't need to write one. However, if you want custom behavior or do not link with `gtest_main`, add:
 
-Compile the file linking with GoogleTest and GoogleMock libraries.
-Run the test binary, and observe output with passing tests.
-
-```shell
-./my_first_test
+```cpp
+int main(int argc, char** argv) {
+  ::testing::InitGoogleTest(&argc, argv);  // Initializes GoogleTest
+  return RUN_ALL_TESTS();  // Runs all tests and returns the result
+}
 ```
-Expected output:
+
+### 4. Compile Your Test
+Compile the test source files and link against GoogleTest and GoogleMock. For example, using `g++` and CMake, commands may look like:
+
+```bash
+# Using CMake
+mkdir build && cd build
+cmake ..
+make
+# Or using g++ directly
+
+g++ -std=c++11 -isystem /path/to/googletest/include -pthread \
+    test_file.cc /path/to/libgtest.a /path/to/libgmock.a \
+    -o test_program
 ```
-[ RUN      ] ExampleTest.SimpleCheck
-[       OK ] ExampleTest.SimpleCheck
+
+Refer to [Configuring GoogleTest in Your Project](/getting-started/prerequisites-installation/configuration-setup) for detailed build integration.
+
+### 5. Run Your Test Program
+Execute the compiled test binary in your terminal or IDE:
+
+```bash
+./test_program
+```
+
+The output will display the test results:
+
+```
+[==========] Running 1 test from 1 test suite.
+[----------] Global test environment set-up.
+[----------] 1 test from FactorialTest
+[ RUN      ] FactorialTest.ComputesCorrectValues
+[       OK ] FactorialTest.ComputesCorrectValues (0 ms)
+[----------] 1 test from FactorialTest (0 ms total)
+
+[----------] Global test environment tear-down
+[==========] 1 test from 1 test suite ran. (0 ms total)
 [  PASSED  ] 1 test.
 ```
 
----
-
-### Step 3: Define a Mock Class
-
-Mock a simple interface by inheriting from it and using `MOCK_METHOD` macros.
-
-Given an interface:
-
-```cpp
-class Foo {
- public:
-  virtual ~Foo() = default;
-  virtual int GetSize() const = 0;
-  virtual bool Process(int n) = 0;
-};
-```
-
-Define a mock:
-
-```cpp
-#include <gmock/gmock.h>
-
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(int, GetSize, (), (const, override));
-  MOCK_METHOD(bool, Process, (int n), (override));
-};
-```
-
-Note:
-- Return type
-- Method name
-- Argument list syntax
-- Use `(const, override)` for const override methods
-
-### Step 4: Set Expectations and Default Behaviors
-
-Use `EXPECT_CALL` to specify how `MockFoo` methods are expected to be called.
-
-```cpp
-#include <gtest/gtest.h>
-using ::testing::Return;
-
-TEST(MockFooTest, ProcessWorks) {
-  MockFoo mock;
-
-  // Set default action for GetSize()
-  ON_CALL(mock, GetSize()).WillByDefault(Return(10));
-
-  // Expect Process(5) to be called once and return true.
-  EXPECT_CALL(mock, Process(5)).WillOnce(Return(true));
-
-  EXPECT_EQ(mock.GetSize(), 10);          // Will use ON_CALL
-  EXPECT_TRUE(mock.Process(5));           // Must match EXPECT_CALL
-}
-```
-
-### Step 5: Run the Mocked Test
-
-Build and run to verify the expectations.
-
-If `Process(5)` is not called, the test will fail.
-
-```shell
-[ RUN      ] MockFooTest.ProcessWorks
-[       OK ] MockFooTest.ProcessWorks
-[  PASSED  ] 1 test.
-```
+A passing test outputs `[  PASSED  ]` along with summaries. If an assertion fails, details including file and line number help you identify the failure.
 
 ---
 
-# Understanding Test Discovery
+## Best Practices & Tips
 
-GoogleTest automatically discovers tests defined with `TEST` or `TEST_F` macros by scanning the binary for registered test cases. You don’t need to manually register or run tests.
-
-### How to Run Selected Tests
-
-- You can run specific tests by name using the `--gtest_filter` flag:
-
-```shell
-./my_test_binary --gtest_filter=MockFooTest.ProcessWorks
-```
+- **Name Your Tests Clearly:** Test suite and test names should reflect what is being tested and the expected behavior, respectively.
+- **Use `EXPECT_*` for Continued Tests:** Prefer `EXPECT_*` assertions so tests run all checks even if some fail.
+- **Use `ASSERT_*` When Needed:** Use `ASSERT_*` if failure should prevent subsequent test steps (e.g., if dereferencing pointers).
+- **Organize Tests into Suites:** Group logically related tests under a common test suite.
+- **Keep Tests Small and Focused:** Each test should verify one behavior or aspect.
+- **Use Test Fixtures (`TEST_F`)** when sharing common setup or data among tests.
 
 ---
 
-# Assertions Overview
+## Troubleshooting
 
-GoogleTest provides assertions for validating test conditions; `EXPECT` macros continue after failure, while `ASSERT` macros abort the test at failure.
+### Tests Don't Run or Output Is Empty
+- Ensure you call `RUN_ALL_TESTS()` in `main`.
+- Confirm tests are linked into your executable.
 
-For your first test, `EXPECT_EQ(expected, actual)` is the recommended starting point.
+### Compilation Errors
+- Verify GoogleTest include paths and library linking.
+- Match compiler versions with GoogleTest's supported standards.
 
-Other useful assertions:
+### Assertion Failures
+- Review failure messages for mismatched expected vs. actual values.
+- Use verbose flags to get detailed stack traces if needed.
 
-- `EXPECT_TRUE(condition)` / `EXPECT_FALSE(condition)`
-- `EXPECT_NE(val1, val2)` (not equal)
-- `EXPECT_LT(val1, val2)` (less than)
-- `EXPECT_THROW(statement, exception_type)`
-
-For a full list, see [Assertions Reference](../../api_reference/core_test_apis/assertions_reference).
-
----
-
-# Practical Tips & Best Practices
-
-- Set expectations **before** exercising code.
-- Use `_` matcher as a wildcard to ignore irrelevant arguments.
-- Use `ON_CALL` to define default behaviors without expectations.
-- Use `NiceMock` or `StrictMock` to tailor treatment of uninteresting calls.
-- Prefer explicit cardinalities with `.Times()` when you need to verify call counts.
+### GoogleTest Not Found
+- Follow installation and configuration steps at [Setting Up and Installing GoogleTest](/guides/getting-started/setup-installation).
 
 ---
 
-# Common Pitfalls and Troubleshooting
+## Next Steps
 
-<AccordionGroup title="Common Issues While Writing Your First Test">
-<Accordion title="Test Not Discovered or Run">
-Check that your test binary is linked with GoogleTest and that you use the `TEST` or `TEST_F` macros. Ensure your build system compiles the test source.
-</Accordion>
-<Accordion title="Tests Fail Due to Unsatisfied Expectations">
-Verify that your code calls all expected mock methods with the correct arguments and number of times. Use `--gmock_verbose=info` to trace mock calls.
-</Accordion>
-<Accordion title="Uninteresting Mock Call Warning">
-If you see warnings about uninteresting calls, consider using `EXPECT_CALL(...).Times(AnyNumber())` for those methods or use `NiceMock`.
-</Accordion>
-</AccordionGroup>
+Once you're comfortable running your first test, consider:
+
+- Writing parameterized tests for more comprehensive coverage.
+- Using test fixtures to share setup code.
+- Exploring advanced assertions and matchers in GoogleTest (see [Assertion Macros](/api-reference/core-testing-apis/assertion-macros)).
+- Integrating mocks with GoogleMock for testing interaction patterns (see [Using Mocks: Patterns and Best Practices](/guides/mocking-and-advanced-techniques/using-mocks)).
 
 ---
 
-# Next Steps & Further Learning
+## Additional Resources
 
-- Explore [Writing Your First Test & Mock](../../getting-started/first-run-usage/writing-first-test) for a comprehensive example.
-- Learn about [Organizing and Discovering Tests](../../guides/core-testing-patterns/organizing-tests) to manage larger projects.
-- Advance to [Creating and Using Mocks](../../guides/mocking-and-advanced-techniques/creating-and-using-mocks) to master mocking techniques.
-- Use [Assertions Best Practices](../../guides/core-testing-patterns/assertions-best-practices) to write effective checks.
-
----
-
-# Sample Minimal Test File
-
-```cpp
-#include <gmock/gmock.h>
-#include <gtest/gtest.h>
-
-class Foo {
- public:
-  virtual ~Foo() = default;
-  virtual int GetValue() const = 0;
-};
-
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(int, GetValue, (), (const, override));
-};
-
-TEST(FooTest, ReturnsExpectedValue) {
-  MockFoo mock_foo;
-  ON_CALL(mock_foo, GetValue()).WillByDefault(testing::Return(42));
-  EXPECT_CALL(mock_foo, GetValue()).Times(1);
-
-  int val = mock_foo.GetValue();
-  EXPECT_EQ(val, 42);
-}
-```
-
-Compile and run:
-
-```shell
-$ g++ -std=c++17 my_test.cc -lgtest -lgmock -pthread -o my_test
-$ ./my_test
-```
+- [GoogleTest Primer](docs/primer.md): Comprehensive introduction and examples.
+- [Writing & Running Your First Test](getting-started/first-steps-usage/writing-running-first-test.mdx): Official quickstart.
+- [Mocking Reference](docs/reference/mocking.md): Learn how to create and configure mocks.
+- [Test Discovery and Execution Workflow](/guides/getting-started/test-discovery-execution): Understand how tests are found and run.
 
 ---
 
-# Summary
-
-This guide equipped you with the foundational knowledge to write your first unit test and mock using GoogleTest and GoogleMock. You learned the basic test and mock structure, how to set expectations, use assertions, and troubleshoot common issues.
+Happy Testing with GoogleTest!
 
 ---
-
-# References
-
-- [GoogleTest Primer](../../getting-started/first-run-usage/writing-first-test)
-- [GoogleMock Cheat Sheet](../../docs/gmock_cheat_sheet.md)
-- [GoogleMock Cookbook](../../docs/gmock_cook_book.md)
-- [Mocking Reference](../../docs/reference/mocking.md)
-- [GoogleTest Assertions Reference](../../api_reference/core_test_apis/assertions_reference)
-
-For more examples and detailed usage, explore these linked resources.
-
----
-
-# Tips
-
-<Tip>
-Always place `EXPECT_CALL` before invoking the actual function to avoid undefined behavior.
-</Tip>
-<Tip>
-Use `EXPECT_CALL(mock, Method(_)).Times(AnyNumber())` to allow calls without producing warnings.
-</Tip>
-<Note>
-If your mock method returns a non-default-constructible object, you must specify an action returning a valid object to avoid runtime errors.
-</Note>
-
----
-
-# Diagram: Simple Test Flow
-
-```mermaid
-flowchart TD
-  Start([Start]) --> WriteTest["Write test using TEST macro"]
-  WriteTest --> Compile["Compile test executable"]
-  Compile --> RunTests["Run test executable"]
-  RunTests --> TestDiscovered{Tests discovered?}
-  TestDiscovered -- Yes --> TestsPass{Tests pass?}
-  TestDiscovered -- No --> FailDiscovery["Check setup & linkage"]
-  TestsPass -- Yes --> Done([Done: success])
-  TestsPass -- No --> FailTest["Check test output, debug failures"]
-  FailDiscovery --> End([End])
-  FailTest --> End
-```
-
-This flow helps visualize the basic journey from writing your first test to verifying its success.
